<resources>
    <string name="app_name">posv_application</string>
    <string name="kakao_app_key">71f1705ae0c01fa5875e86f0b808e0b5</string>

    <string-array name="email">
        <item>이메일을 선택해주세요</item>
        <item>"@"naver.com</item>
        <item>"@"gmail.com</item>
        <item>"@"daum.net</item>
        <item>"@"nate.com</item>
    </string-array>

    <string name="LBS_title">LBS</string>
    <string name="LBS_description">전국의 위험지역을 알아봐요!</string>
    <string name="VIOLENCE_title">폭력사례</string>
    <string name="VIOLENCE_description">학교폭력의 사례</string>
    <string name="BOARD_title">익명게시판</string>
    <string name="BOARD_description">익명으로 대화해요!</string>
    <string name="COUNSELOR_title">상담사연결</string>
    <string name="COUNSELOR_description">전화 또는 카카오톡으로 상담사를 연결해드립니다!</string>
    <string name="FIND_title">우리 동네의 상담센터를 알고 싶어요!</string>
    <string name="FIND_description">지역명 : 서울/인천</string>

    <string name="action_settings">Settings</string>
    
</resources>
