<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="9"
    android:background="@color/backgroundcolor"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <!--툴바 레이아웃-->
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="MAIN MENU"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <!--LBS 레이아웃-->
    <LinearLayout
        android:id="@+id/LBS_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:onClick="btn_LBS_menu"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/background_lbs_button"
                    android:padding="10dp"
                    android:src="@drawable/lbs_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/LBS_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/LBS_description"
                    android:textSize="18sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <!-- 폭력사례 / 익명게시판 레이아웃-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LBS_menu"
            android:layout_marginRight="10dp"
            android:textAlignment="center">

            <LinearLayout
                android:id="@+id/VIOLENCE_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="btn_Violence_menu"
                android:orientation="vertical"
                android:padding="15dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/background_violence_button"
                    android:padding="10dp"
                    android:src="@drawable/violence_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/VIOLENCE_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/VIOLENCE_description"
                    android:textSize="18sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LBS_menu"
            android:textAlignment="center">

            <LinearLayout
                android:id="@+id/BOARD_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="btn_BOARD_menu"
                android:orientation="vertical"
                android:padding="15dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/background_board_button"
                    android:padding="10dp"
                    android:src="@drawable/board_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/BOARD_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/BOARD_description"
                    android:textSize="18sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!--상담사연결 레이아웃-->
    <LinearLayout
        android:id="@+id/COUNSELOR_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="408dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:onClick="btn_COUNSELOR_menu"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/background_counselor_button"
                    android:padding="10dp"
                    android:src="@drawable/counselor_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/COUNSELOR_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/COUNSELOR_description"
                    android:textSize="18sp"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <!--검색 레이아웃-->
    <LinearLayout
        android:id="@+id/FIND_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/COUNSELOR_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="583dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/help_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/background_find_button"
                    android:padding="10dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/help" />

                <TextView
                    android:id="@+id/findText"
                    android:layout_toRightOf="@+id/help_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp"
                    android:text="@string/FIND_title"
                    android:textSize="23sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/searchText"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/findText"
                    android:layout_alignStart="@+id/findText"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/lightGray"
                    android:textColorHint="@color/lightgray2"
                    android:hint=" 지역명 : 서울/인천"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/findText"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="36dp"
                    android:background="@color/find_color"
                    android:text="찾기"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>